# rust-xcb

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXCEPTION_LIST.txt  LICENSE  README.md  TODO_v1.md  build.rs  crates.js  gen.sh  help.html  r_client.py  rs_client.py  search-index.js  settings.html  source-files.js  src-files.js  test_examples.sh  update.sh
.github/workflows/: branch_doc.yml  build_test.yml  ci.yml  doc.yml  lint.yml
as_raw_xcb_connection/: all.html  enum.xcb_connection_t.html  index.html  sidebar-items.js  struct.ValidConnection.html  trait.AsRawXcbConnection.html
bitflags/: all.html  index.html  macro.bitflags.html
branches/: search-index.js  settings.html
branches/eventstruct/: search-index.js
branches/fix_257/: crates.js  help.html  search-index.js  src-files.js
branches/fix_wired_out/: search-index.js  settings.html  source-files.js
branches/libc/: all.html  fn.CPU_COUNT.html  fn.CPU_ZERO.html  fn.IPTOS_TOS.html  fn.RT_LOCALADDR.html  fn.RT_TOS.html  fn.SO_EE_OFFENDER.html  fn.__errno_location.html  fn.accept4.html  fn.aio_cancel.html  fn.aio_read.html  fn.aio_write.html  fn.atof.html  fn.clone.html  fn.daemon.html  fn.dup3.html  fn.endgrent.html  fn.endmntent.html  fn.endpwent.html  fn.epoll_wait.html  fn.fallocate64.html  fn.fanotify_init.html  fn.fgetxattr.html  fn.fremovexattr.html  fn.fsetpos64.html  fn.ftok.html  fn.getgrgid.html  fn.getgrgid_r.html  fn.getgrnam.html  fn.getgrouplist.html  fn.getpwent.html  fn.getspnam_r.html  fn.getxattr.html  fn.globfree.html  fn.iconv.html  fn.if_freenameindex.html  fn.initgroups.html  fn.inotify_init.html  fn.inotify_init1.html  fn.lio_listio.html  (+76 more)
branches/more_doc/: search-index.js
branches/v1.0-dev/: crates.js  search-index.js  settings.html  source-files.js
branches/x11/: all.html
branches/xcb/: sidebar-items.js
branches/xcb-1.14/: search-index.js  source-files.js
cfg_if/: all.html  index.html  macro.cfg_if.html
examples/: basic_window  basic_window.rs  connect.rs  connect_str.rs  display_text.rs  draw_root_window.rs  drawing.rs  ffi_randr.rs  ffi_randr_crtc_info.rs  ffi_screen_info.rs  ffi_xkb_init.rs  get_all_windows.rs  get_keyboard_names.rs  global-hotkey.rs  must_fail_borrow_check.rs  must_fail_borrow_check__reply.rs  must_fail_borrow_check__setup.rs  opengl_window.rs  opengl_window_dl.rs  present_special_event.rs  print_setup.rs  randr_crtc_info.rs  randr_crtc_listen.rs  randr_screen_info.rs  randr_screen_modes.rs  screen_info.rs  screenshot.rs  test.rs  threaded_window.rs  tiny_xlib.rs  unsafe_screen_info.rs  xinput_stylus_events.rs  xkb_init.rs  xkb_keyboard_and_mouse_events.rs  xkb_keyboard_mouse_event.rs
examples/opengl_window/: Cargo.toml  main.rs
examples/todo/: draw_root_window.rs  must_fail_borrow_check__setup.rs
libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ACCOUNTING.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADFS_SUPER_MAGIC.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  (+6320 more)
log/: all.html  constant.STATIC_MAX_LEVEL.html  enum.Level.html  enum.LevelFilter.html  fn.logger.html  fn.max_level.html  fn.set_boxed_logger.html  fn.set_logger.html  fn.set_logger_racy.html  fn.set_max_level.html  index.html  macro.log_enabled!.html  sidebar-items.js  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html  trait.Log.html
scripts/: install_xcb.sh  test_examples.sh
search.desc/bitflags/: bitflags-desc-0-.js
search.desc/libc/: libc-desc-0-.js
search.desc/x11/: x11-desc-0-.js
search.desc/xcb/: xcb-desc-0-.js  xcb-desc-1-.js  xcb-desc-2-.js
src/: base.rs  base_old.rs  bigreq.rs  composite.rs  damage.rs  dpms.rs  dri2.rs  error.rs  event.rs  ext.rs  ge.rs  glx.rs  lat1_str.rs  lib.rs  macro.rs  macros.rs  randr.rs  record.rs  render.rs  res.rs  screensaver.rs  shape.rs  shm.rs  sync.rs  test.rs  xc_misc.rs  xcb.rc  xcb.rs  xevie.rs  xf86dri.rs  xf86vidmode.rs  xfixes.rs  xinerama.rs  xinput.rs  xkb.rs  xprint.rs  xproto.rs  xselinux.rs  xtest.rs  xv.rs  (+1 more)
src/as_raw_xcb_connection/: lib.rs.html
src/bitflags/: lib.rs.html
src/ffi/: base.rs  (+33 more)
x11/: all.html  index.html  sidebar-items.js
xcb/: all.html  enum.ConnError.html  enum.Error.html  enum.Event.html  enum.EventQueueOwner.html  enum.Extension.html  enum.Lat1Error.html  enum.ProtocolError.html  fn.cache_extensions_data.html  fn.parse_display.html  fn.resolve_error.html  fn.resolve_event.html  index.html  macro.atoms_struct!.html  macro.atoms_struct.html  sidebar-items.js  struct.AuthInfo.html  struct.Connection.html  struct.DisplayInfo.html  struct.ExtensionData.html  struct.Lat1Str.html  struct.Lat1StrF.html  struct.Lat1String.html  struct.SpecialEvent.html  struct.SpecialEventId.html  struct.UnknownError.html  struct.UnknownEvent.html  struct.VoidCookie.html  struct.VoidCookieChecked.html  trait.BaseError.html  trait.BaseEvent.html  trait.Cookie.html  trait.CookieChecked.html  trait.CookieWithReplyChecked.html  trait.CookieWithReplyUnchecked.html  trait.GeEvent.html  trait.Raw.html  trait.RawRequest.html  trait.Reply.html  trait.Request.html  (+7 more)
xcbgen/: matcher.py  state.py  xtypes.py
xml/: present.xml  randr.xml  xfixes.xml  xkb.xml  xproto.xml
(+58860 files in other folders)
