[package]
name = "xcb"
version = "0.10.1"
authors = [ "Remi Thebault <remi.thebault@gmail.com>" ]
description = "Rust bindings and wrappers for XCB"
repository = "https://github.com/rtbo/rust-xcb"
documentation = "http://rtbo.github.io/rust-xcb/xcb/"
readme = "README.md"
keywords = ["xcb", "window", "xlib", "x11", "opengl"]
license = "MIT"
build = "build/main.rs"
exclude = ["scripts", ".github", "examples/must_fail_*"]
autoexamples = false

[build-dependencies]
libc = "0.2.102"
quick-xml = "0.22.0"

[dependencies]
libc = "0.2.102"
log = "0.4.14"

[dependencies.x11]
version = "2.19.0"
optional = true
features = ["xlib"]

[features]
xlib_xcb = ["x11/xlib"]
thread = []

composite = [ "xfixes" ]
damage = [ "xfixes" ]
dpms = []
dri2 = []
dri3 = []
genericevent = []
glx = []
present = [ "render", "xfixes", "sync" ]
randr = [ "render" ]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = [ "render", "shape" ]
xinerama = []
# input = [ "xfixes" ]
xkb = []
x_print = []
selinux = []
test = []
xvmc = [ "xv" ]
xv = [ "shm" ]

[dev-dependencies]
gl = "0.14.0"

[dev-dependencies.x11]
version = "2.19.0"
features = ["xlib", "glx"]

[[example]]
name = "basic_window"

[[example]]
name = "connect_str"

[[example]]
name = "connect"

[[example]]
name = "draw_root_window"

[[example]]
name = "drawing"

[[example]]
name = "opengl_window"
required-features = ["xlib_xcb", "dri2"]

[[example]]
name = "randr_crtc_info"
required-features = ["randr"]

[[example]]
name = "ffi_randr_crtc_info"
required-features = ["randr"]

[[example]]
name = "randr_crtc_listen"
required-features = ["randr"]

[[example]]
name = "randr_screen_info"
required-features = ["randr"]

[[example]]
name = "randr_screen_modes"
required-features = ["randr"]

[[example]]
name = "screen_info"

[[example]]
name = "ffi_screen_info"

[[example]]
name = "threaded_window"
required-features = ["thread"]

[[example]]
name = "xkb_init"
required-features = ["xkb"]

[[example]]
name = "ffi_xkb_init"
required-features = ["xkb"]
