[package]
name = "xcb"
version = "1.1.1"
authors = [ "Remi Thebault <remi.thebault@gmail.com>" ]
description = "Rust safe bindings for XCB"
repository = "https://github.com/rust-x-bindings/rust-xcb"
documentation = "https://rust-x-bindings.github.io/rust-xcb/xcb/"
readme = "README.md"
keywords = ["xcb", "window", "xlib", "x11", "opengl"]
license = "MIT"
build = "build/main.rs"
exclude = [".github", "examples/todo/*", "gen", "xml/upstream", "xml/upstream_normalized"]
autoexamples = false
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
quick-xml = "0.22.0"

[dependencies]
libc = "0.2.102"
bitflags = "1.3.2"

[dependencies.x11]
version = "2.19.0"
optional = true
features = ["xlib"]

[features]
debug_atom_names = []
xlib_xcb = ["x11/xlib"]

composite = [ "xfixes" ]
damage = [ "xfixes" ]
dpms = []
dri2 = []
dri3 = []
ge = []
glx = []
present = [ "render", "xfixes", "sync" ]
randr = [ "render" ]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = [ "render", "shape" ]
xinerama = []
xinput = [ "xfixes" ]
xkb = []
xprint = []
xselinux = []
xtest = []
xv = [ "shm" ]
xvmc = [ "xv" ]

[dev-dependencies]
gl = "0.14.0"
png = "0.17.5"

[dev-dependencies.x11]
version = "2.19.1"
features = ["xlib", "glx"]

[[example]]
name = "basic_window"

[[example]]
name = "connect_str"

[[example]]
name = "connect"

# [[example]]
# name = "draw_root_window"

[[example]]
name = "drawing"

[[example]]
name = "get_all_windows"

[[example]]
name = "opengl_window"
required-features = ["glx", "xlib_xcb", "dri2"]

[[example]]
name = "randr_crtc_info"
required-features = ["randr"]

[[example]]
name = "print_setup"

[[example]]
name = "randr_crtc_listen"
required-features = ["randr"]

[[example]]
name = "randr_screen_info"
required-features = ["randr"]

[[example]]
name = "randr_screen_modes"
required-features = ["randr"]

[[example]]
name = "screen_info"

# [[example]]
# name = "threaded_window"
# required-features = ["thread"]

[[example]]
name = "xinput_stylus_events"
required-features = ["xinput"]

[[example]]
name = "screenshot"

[[example]]
name = "xkb_init"
required-features = ["xkb"]
