[package]
name = "xcb"
version = "1.7.0"
authors = ["Remi Thebault <remi.thebault@gmail.com>"]
description = "Rust safe bindings for XCB"
repository = "https://github.com/rust-x-bindings/rust-xcb"
documentation = "https://docs.rs/xcb/latest/xcb"
readme = "README.md"
keywords = ["xcb", "window", "xlib", "x11", "opengl"]
license = "MIT"
build = "build/main.rs"
exclude = [
    ".github",
    "examples/todo/*",
    "gen",
    "xml/upstream",
    "xml/upstream_normalized",
]
autoexamples = false
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
quick-xml = "0.30.0"

[dependencies]
libc = "0.2.102"
bitflags = "1.3.2"
as-raw-xcb-connection = { version = "1.0", optional = true }
libloading = { version = "0.9.0", optional = true }

[dependencies.x11]
version = "2.19.0"
optional = true
features = ["xlib"]

[dependencies.x11-dl]
version = "2.19.0"
optional = true

[features]
default = ["libxcb_v1_14"]
debug_atom_names = []
dl = ["dep:libloading"]
libxcb_v1_14 = []
xlib_xcb = ["x11/xlib"]
xlib_xcb_dl = ["dl", "dep:x11-dl"]

all-extensions = [
    "composite",
    "damage",
    "dpms",
    "dri2",
    "dri3",
    "ge",
    "glx",
    "present",
    "randr",
    "record",
    "render",
    "res",
    "screensaver",
    "shape",
    "shm",
    "sync",
    "xevie",
    "xf86dri",
    "xf86vidmode",
    "xfixes",
    "xinerama",
    "xinput",
    "xkb",
    "xprint",
    "xselinux",
    "xtest",
    "xv",
    "xvmc",
]

# Extension features
composite = ["xfixes"]
damage = ["xfixes"]
dpms = []
dri2 = []
dri3 = []
ge = []
glx = []
present = ["render", "xfixes", "sync"]
randr = ["render"]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = ["render", "shape"]
xinerama = []
xinput = ["xfixes"]
xkb = []
xprint = []
xselinux = []
xtest = []
xv = ["shm"]
xvmc = ["xv"]

[dev-dependencies]
gl = "0.14.0"
png = "0.17.5"
tiny-xlib = "0.2.4"

[dev-dependencies.x11]
version = "2.19.1"
features = ["xlib", "glx"]

[[example]]
name = "basic_window"

[[example]]
name = "connect_str"

[[example]]
name = "connect"

[[example]]
name = "draw_root_window"

[[example]]
name = "drawing"

[[example]]
name = "get_keyboard_names"
required-features = ["xkb", "xinput", "xlib_xcb"]

[[example]]
name = "get_all_windows"

[[example]]
name = "opengl_window"
required-features = ["glx", "xlib_xcb", "dri2"]

[[example]]
name = "opengl_window_dl"
required-features = ["dri2", "glx", "xlib_xcb_dl"]

[[example]]
name = "present_special_event"
required-features = ["present", "randr"]

[[example]]
name = "randr_crtc_info"
required-features = ["randr"]

[[example]]
name = "print_setup"

[[example]]
name = "randr_crtc_listen"
required-features = ["randr"]

[[example]]
name = "randr_screen_info"
required-features = ["randr"]

[[example]]
name = "randr_screen_modes"
required-features = ["randr"]

[[example]]
name = "screen_info"

[[example]]
name = "threaded_window"

[[example]]
name = "xinput_stylus_events"
required-features = ["xinput"]

[[example]]
name = "screenshot"

[[example]]
name = "xkb_init"
required-features = ["xkb"]

[[example]]
name = "xkb_keyboard_mouse_event"
required-features = ["xkb"]

[[example]]
name = "tiny_xlib"
required-features = ["as-raw-xcb-connection"]
